RESOLVED FIXED73374
REGRESSION(r91931): WKKeyValueStorageManagerGetKeyValueStorageOrigins may not report the correct list of origins the first time it is called
https://bugs.webkit.org/show_bug.cgi?id=73374
Summary REGRESSION(r91931): WKKeyValueStorageManagerGetKeyValueStorageOrigins may not...
Jessie Berlin
Reported 2011-11-29 16:39:21 PST
After http://trac.webkit.org/changeset/91931, the list of origins using local storage is not read into memory until the first time local storage is used or the list is requested. Reading into memory from disk happens on another thread, so it is possible for the first call to WKKeyValueStorageManagerGetKeyValueStorageOrigins to report 0 origins before the reading from disk is done. <rdar://problem/10196057>
Attachments
Patch (12.69 KB, patch)
2011-11-29 17:22 PST, Jessie Berlin
no flags
Jessie Berlin
Comment 1 2011-11-29 17:22:47 PST
Jessie Berlin
Comment 2 2011-11-29 18:29:48 PST
Note You need to log in before you can comment on or make changes to this bug.