WKKeyValueStorageManagerGetKeyValueStorageOrigins may not report the correct list of origins the first time it is called. https://bugs.webkit.org/show_bug.cgi?id=73374 (<rdar://problem/10196057>)

Reviewed by Brady Eidson.

Source/WebCore:

Add a callback for when the Storage Tracker is done loading the list of origins with Local
Storage.

* storage/StorageTracker.cpp:
(WebCore::StorageTracker::StorageTracker):
Keep track of whether the import from disk has been completed.
(WebCore::StorageTracker::notifyFinishedImportingOriginIdentifiersOnMainThread):
(WebCore::StorageTracker::finishedImportingOriginIdentifiers):
Set m_finishedImportingOriginIdentifiers to true and tell the client.
(WebCore::StorageTracker::syncImportOriginIdentifiers):
When finished, notify the shared StorageTracker on the main thread.
* storage/StorageTracker.h:
(WebCore::StorageTracker::originsLoaded):

* storage/StorageTrackerClient.h:
Add didFinishLoadingOrigins.

Source/WebKit/mac:

* Storage/WebStorageTrackerClient.h:
* Storage/WebStorageTrackerClient.mm:
(WebStorageTrackerClient::didFinishLoadingOrigins):

Source/WebKit2:

Queue any requests for the origins that have Local Storage until the StorageTracker is done
loading the list of those origins from disk.

* WebProcess/KeyValueStorage/WebKeyValueStorageManager.cpp:
(WebKit::keyValueStorageOriginIdentifiers):
Refactored here from getKeyValueStorageOrigins so it can be used by didFinishLoadingOrigins.
(WebKit::dispatchDidGetKeyValueStorageOrigins):
Ditto.
(WebKit::WebKeyValueStorageManager::getKeyValueStorageOrigins):
If the StorageTracker is not done loading the list of origins from disk, queue up the
request to be handled later.
(WebKit::WebKeyValueStorageManager::didFinishLoadingOrigins):
Dispatch the results for any requests that were make before the StorageTracker was done
loading the list of origins from disk.
(WebKit::WebKeyValueStorageManager::dispatchDidModifyOrigin):
* WebProcess/KeyValueStorage/WebKeyValueStorageManager.h:

* WebProcess/WebProcess.cpp:
(WebKit::WebProcess::initializeWebProcess):
Set the WebKeyValueStorageManager as the StorageTrackerClient.

Canonical link: https://commits.webkit.org/89922@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101441 268f45cc-cd09-0410-ab3c-d52691b4dbfc